--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
 <nz-layout class="app-wrapper">
-  <nz-content>
+  <nz-content class="outer-content">
     <div class="w-100">
       <router-outlet></router-outlet>
     </div>
   </nz-content>
 </nz-layout>
+
